[gd_scene load_steps=97 format=2]

[ext_resource path="res://assets/npc/enemy/slime/slime_pink_1.png" type="Texture" id=1]
[ext_resource path="res://npc/enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://npc/states/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://overlap/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://overlap/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://target/TargetButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://npc/enemy/PlayerDetectionZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/npc/enemy/slime/slime_pink_1_portrait.png" type="Texture" id=9]
[ext_resource path="res://npc/enemy/EnemyStateMachine.gd" type="Script" id=10]
[ext_resource path="res://npc/enemy/states/Idle.gd" type="Script" id=11]
[ext_resource path="res://npc/enemy/states/Wander.gd" type="Script" id=12]
[ext_resource path="res://npc/enemy/states/Chase.gd" type="Script" id=13]
[ext_resource path="res://ui/healthbar/health_gradient.tres" type="Texture" id=14]

[sub_resource type="CapsuleShape2D" id=81]
radius = 3.0
height = 6.0

[sub_resource type="Animation" id=1]
resource_name = "E_attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=2]
resource_name = "E_death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "E_idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "E_move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "NE_attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=6]
resource_name = "NE_death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=7]
resource_name = "NE_idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=8]
resource_name = "NE_move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=9]
resource_name = "NW_attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59 ]
}

[sub_resource type="Animation" id=10]
resource_name = "NW_death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63 ]
}

[sub_resource type="Animation" id=11]
resource_name = "NW_idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=12]
resource_name = "NW_move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55 ]
}

[sub_resource type="Animation" id=13]
resource_name = "N_attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=14]
resource_name = "N_death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=15]
resource_name = "N_idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=16]
resource_name = "N_move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=17]
length = 0.001

[sub_resource type="Animation" id=18]
resource_name = "SE_attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 120, 121, 122, 123 ]
}

[sub_resource type="Animation" id=19]
resource_name = "SE_death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 124, 125, 126, 127 ]
}

[sub_resource type="Animation" id=20]
resource_name = "SE_idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 112, 113, 114, 115 ]
}

[sub_resource type="Animation" id=21]
resource_name = "SE_move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 116, 117, 118, 119 ]
}

[sub_resource type="Animation" id=22]
resource_name = "SW_attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 88, 89, 90, 91 ]
}

[sub_resource type="Animation" id=23]
resource_name = "SW_death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 92, 93, 94, 95 ]
}

[sub_resource type="Animation" id=24]
resource_name = "SW_idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82, 83 ]
}

[sub_resource type="Animation" id=25]
resource_name = "SW_move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 84, 85, 86, 87 ]
}

[sub_resource type="Animation" id=26]
resource_name = "S_attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 104, 105, 106, 107 ]
}

[sub_resource type="Animation" id=27]
resource_name = "S_death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 108, 109, 110, 111 ]
}

[sub_resource type="Animation" id=28]
resource_name = "S_idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 96, 97, 98, 99 ]
}

[sub_resource type="Animation" id=29]
resource_name = "S_move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 100, 101, 102, 103 ]
}

[sub_resource type="Animation" id=30]
resource_name = "W_attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75 ]
}

[sub_resource type="Animation" id=31]
resource_name = "W_death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 76, 77, 78, 79 ]
}

[sub_resource type="Animation" id=32]
resource_name = "W_idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66, 67 ]
}

[sub_resource type="Animation" id=33]
resource_name = "W_move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 68, 69, 70, 71 ]
}

[sub_resource type="AnimationNodeAnimation" id=73]
animation = "S_attack"

[sub_resource type="AnimationNodeAnimation" id=74]
animation = "W_attack"

[sub_resource type="AnimationNodeAnimation" id=75]
animation = "N_attack"

[sub_resource type="AnimationNodeAnimation" id=76]
animation = "E_attack"

[sub_resource type="AnimationNodeAnimation" id=77]
animation = "SE_attack"

[sub_resource type="AnimationNodeAnimation" id=78]
animation = "NE_attack"

[sub_resource type="AnimationNodeAnimation" id=79]
animation = "NW_attack"

[sub_resource type="AnimationNodeAnimation" id=80]
animation = "SW_attack"

[sub_resource type="AnimationNodeBlendSpace2D" id=34]
blend_point_0/node = SubResource( 73 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 74 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 75 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 76 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 77 )
blend_point_4/pos = Vector2( 0.8, 1 )
blend_point_5/node = SubResource( 78 )
blend_point_5/pos = Vector2( 0.8, -1 )
blend_point_6/node = SubResource( 79 )
blend_point_6/pos = Vector2( -0.8, -1 )
blend_point_7/node = SubResource( 80 )
blend_point_7/pos = Vector2( -0.8, 1 )

[sub_resource type="AnimationNodeAnimation" id=65]
animation = "S_death"

[sub_resource type="AnimationNodeAnimation" id=66]
animation = "W_death"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "N_death"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "E_death"

[sub_resource type="AnimationNodeAnimation" id=69]
animation = "SE_death"

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "SW_death"

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "NW_death"

[sub_resource type="AnimationNodeAnimation" id=72]
animation = "NE_death"

[sub_resource type="AnimationNodeBlendSpace2D" id=35]
blend_point_0/node = SubResource( 65 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 66 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 67 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 68 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 69 )
blend_point_4/pos = Vector2( 0.8, 1 )
blend_point_5/node = SubResource( 70 )
blend_point_5/pos = Vector2( -0.8, 1 )
blend_point_6/node = SubResource( 71 )
blend_point_6/pos = Vector2( -0.8, -1 )
blend_point_7/node = SubResource( 72 )
blend_point_7/pos = Vector2( 0.8, -1 )

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "N_idle"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "W_idle"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "E_idle"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "S_idle"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "SW_idle"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "SE_idle"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "NE_idle"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "NW_idle"

[sub_resource type="AnimationNodeBlendSpace2D" id=44]
blend_point_0/node = SubResource( 36 )
blend_point_0/pos = Vector2( 0, -1 )
blend_point_1/node = SubResource( 37 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 38 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 39 )
blend_point_3/pos = Vector2( 0, 1 )
blend_point_4/node = SubResource( 40 )
blend_point_4/pos = Vector2( -0.8, 1 )
blend_point_5/node = SubResource( 41 )
blend_point_5/pos = Vector2( 0.8, 1 )
blend_point_6/node = SubResource( 42 )
blend_point_6/pos = Vector2( 0.8, -1 )
blend_point_7/node = SubResource( 43 )
blend_point_7/pos = Vector2( -0.8, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "W_move"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "E_move"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "S_move"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "N_move"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "NW_move"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "NE_move"

[sub_resource type="AnimationNodeAnimation" id=51]
animation = "SE_move"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "SW_move"

[sub_resource type="AnimationNodeBlendSpace2D" id=53]
blend_point_0/node = SubResource( 45 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 46 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 47 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 48 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 49 )
blend_point_4/pos = Vector2( -0.8, -1 )
blend_point_5/node = SubResource( 50 )
blend_point_5/pos = Vector2( 0.8, -1 )
blend_point_6/node = SubResource( 51 )
blend_point_6/pos = Vector2( 0.8, 1 )
blend_point_7/node = SubResource( 52 )
blend_point_7/pos = Vector2( -0.8, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachine" id=63]
states/Attack/node = SubResource( 34 )
states/Attack/position = Vector2( 359, 150 )
states/Death/node = SubResource( 35 )
states/Death/position = Vector2( 857, 150 )
states/Idle/node = SubResource( 44 )
states/Idle/position = Vector2( 547, 264 )
states/Move/node = SubResource( 53 )
states/Move/position = Vector2( 547, 38 )
transitions = [ "Idle", "Attack", SubResource( 54 ), "Idle", "Move", SubResource( 55 ), "Idle", "Death", SubResource( 56 ), "Move", "Idle", SubResource( 57 ), "Attack", "Idle", SubResource( 58 ), "Attack", "Death", SubResource( 59 ), "Attack", "Move", SubResource( 60 ), "Move", "Death", SubResource( 61 ), "Move", "Attack", SubResource( 62 ) ]
start_node = "Idle"
graph_offset = Vector2( -28, -15 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=64]

[sub_resource type="CircleShape2D" id=82]
radius = 50.01

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 48
collision_mask = 33
script = ExtResource( 2 )
WANDER_TARGET_RANGE = 10

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 1 )
hframes = 4
vframes = 32
frame = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -2 )
rotation = 1.5708
shape = SubResource( 81 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]

[node name="WanderController" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/E_attack = SubResource( 1 )
anims/E_death = SubResource( 2 )
anims/E_idle = SubResource( 3 )
anims/E_move = SubResource( 4 )
anims/NE_attack = SubResource( 5 )
anims/NE_death = SubResource( 6 )
anims/NE_idle = SubResource( 7 )
anims/NE_move = SubResource( 8 )
anims/NW_attack = SubResource( 9 )
anims/NW_death = SubResource( 10 )
anims/NW_idle = SubResource( 11 )
anims/NW_move = SubResource( 12 )
anims/N_attack = SubResource( 13 )
anims/N_death = SubResource( 14 )
anims/N_idle = SubResource( 15 )
anims/N_move = SubResource( 16 )
anims/RESET = SubResource( 17 )
anims/SE_attack = SubResource( 18 )
anims/SE_death = SubResource( 19 )
anims/SE_idle = SubResource( 20 )
anims/SE_move = SubResource( 21 )
anims/SW_attack = SubResource( 22 )
anims/SW_death = SubResource( 23 )
anims/SW_idle = SubResource( 24 )
anims/SW_move = SubResource( 25 )
anims/S_attack = SubResource( 26 )
anims/S_death = SubResource( 27 )
anims/S_idle = SubResource( 28 )
anims/S_move = SubResource( 29 )
anims/W_attack = SubResource( 30 )
anims/W_death = SubResource( 31 )
anims/W_idle = SubResource( 32 )
anims/W_move = SubResource( 33 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 63 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 64 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Death/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0.00158477, 0.0027101 )
parameters/Move/blend_position = Vector2( 0, 0.0027101 )

[node name="TargetButton" parent="." instance=ExtResource( 7 )]
margin_left = -10.0
margin_top = -18.0
margin_right = 6.0
margin_bottom = 0.0

[node name="TargetInfo" parent="TargetButton" index="0"]
display_name = "Slimer"
portrait = ExtResource( 9 )
type = "Slime"
level = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 82 )

[node name="States" type="Node" parent="."]
script = ExtResource( 10 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 11 )

[node name="Wander" type="Node" parent="States"]
script = ExtResource( 12 )

[node name="Chase" type="Node" parent="States"]
script = ExtResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Control" type="Control" parent="."]
margin_left = -11.0
margin_top = -31.0
margin_right = 11.0

[node name="TextureProgress" type="TextureProgress" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -12.0
margin_top = -1.0
margin_right = 8.0
margin_bottom = 1.0
size_flags_vertical = 3
value = 100.0
texture_progress = ExtResource( 14 )
nine_patch_stretch = true

[connection signal="mouse_entered" from="TargetButton" to="." method="_on_TargetButton_mouse_entered"]
[connection signal="mouse_exited" from="TargetButton" to="." method="_on_TargetButton_mouse_exited"]
[connection signal="pressed" from="TargetButton" to="." method="_on_TargetButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="TargetButton"]
[editable path="PlayerDetectionZone"]
